--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "axios": "^1.3.6",
         "laravel-vite-plugin": "^0.7.4",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0",
+        "tailwindcss": "^3.3.2",
         "vite": "^4.3.1"
+    },
+    "dependencies": {
+        "postcss-nesting": "^11.2.2"
     }
 }
