--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mercadopago/dx-php": "^3.0"
+        "mercadopago/dx-php": "^3.0",
+        "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
